<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/boton_1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:id="@+id/btn_1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/boton_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:id="@+id/btn_2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/boton_3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:id="@+id/btn_3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/boton_4"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:id="@+id/btn_4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/boton_5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:id="@+id/btn_5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/tv_texto_btn5"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/tv_btn_5"
            android:visibility="invisible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>